--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.13",
+    "graphql": "^15.5.0",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@tailwindcss/jit": "0.1.3",
+    "@types/node": "^14.14.36",
+    "@types/react": "^17.0.3",
     "autoprefixer": "^10.0.4",
     "postcss": "^8.1.10",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.2.3"
   }
 }
