--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.13",
+    "geolib": "^3.3.1",
     "graphql": "^15.5.0",
     "next": "latest",
     "react": "^17.0.1",
