--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "apollo:generate": "apollo codegen:generate --excludes=node_modules/* --includes=**/*.tsx --endpoint https://api.spacex.land/graphql/ --target typescript --tagName gql --outputFlat types/generated"
   },
   "dependencies": {
     "@apollo/client": "^3.3.13",
