--- a/package.json
+++ b/package.json
@@ -18,9 +18,16 @@
   },
   "devDependencies": {
     "@tailwindcss/jit": "0.1.3",
+    "@testing-library/dom": "^7.30.1",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^13.0.16",
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.0.4",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "postcss": "^8.1.10",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.2.3"
