--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "apollo:generate": "apollo codegen:generate --excludes=node_modules/* --includes=**/*.tsx --endpoint https://api.spacex.land/graphql/ --target typescript --tagName gql --outputFlat types/generated"
+    "apollo:generate": "apollo codegen:generate --excludes=node_modules/* --includes=**/*.tsx --endpoint https://api.spacex.land/graphql/ --target typescript --tagName gql --outputFlat src/types/generated"
   },
   "dependencies": {
     "@apollo/client": "^3.3.13",
